--- a/style.css
+++ b/style.css
@@ -1,3 +1,112 @@
+@font-face {
+    font-family: custom-font;
+    src: url(fonts/Anton-Regular.ttf)(format(ttf));
+}
+
 body {
+    font-family: 'Electrolize', sans-serif;
+    background-color: white;
+    color: black;
+    font-weight: 1000;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    margin-left: 0;
+    padding: 0;
+}
+
+.buttonContainer {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    font-size: 24px;
+}
+
+.choicesContainer {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
+footer {
     background-color: black;
+    color: white;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    position: fixed;
+    bottom: 0;
+    align-items: center;
+    width: 100%;
+}
+
+button {
+    box-shadow: 2px 4px 16px black;
+    border: 4px solid black;
+    margin: 30px;
+}
+
+.box {
+    border: 4px solid black;
+    box-shadow: 2px 4px 16px black;
+    height: 300px;
+    width: 300px;
+    margin: 50px;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    display: flex;
+    flex-direction: 1;
+    padding: 16px;
+}
+
+.over-box {
+    display: block;
+}
+
+.result {
+    margin-top: 30px;
+    margin-bottom: 65px;
+    font-size: 50px;
+    display: flex;
+    justify-content: center;
+}
+
+.case {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.score-counter {
+    display: flex;
+    justify-content: center;
+}
+
+.link {
+    color:black;
+    text-decoration: none;
+    font-size: larger;
+    margin-left: 10px;
+}
+
+.pr {
+    margin-bottom: 50px;
+    font-size: 20px;
+}
+
+.cp {
+    margin-bottom: 50px;
+    font-size: 20px;
+}
+
+.score {
+    font-size: 30px;
+}
+
+.score-container {
+    display: flex;
+    justify-content: space-around;
+    width: 30%;
 }
